# docker-python

./: Dockerfile  create-requirements.sh  docker-entrypoint.sh  pyproject.toml
python38/: Dockerfile
python38-fastapi-serverless/: Dockerfile  pyproject.toml
python38-poetry-serverless/: Dockerfile
