[tool.poetry]
name = "easybroker-python"
version = "0.1.0"
description = ""
authors = ["Oberon"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
requests = "^2.26.0"
python-jose = "^3.3.0"
python-dotenv = "^0.19.2"
uvicorn = "^0.15.0"
pydantic = {extras = ["email"], version = "^1.8.2"}
ib-insync = "^0.9.70"
nest-asyncio = "^1.5.2"
wheel = "^0.37.0"
pandas = "^1.3.4"
pycognito = "^2021.11.0"
mangum = "^0.12.3"
pre-commit = "^2.16.0"
pylint = "^2.12.2"
black = "^21.12b0"
tortoise-orm = "^0.18.1"
aiomysql = "^0.0.22"
pyhumps = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
flake8 = "^4.0.1"
autoflake = "^1.4"
isort = "^5.10.1"
black = "^21.11b1"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
   \.toml
  |\.sh
  |\.git
  |\.ini
  |.env
  |.idea
  |docker
  |venv
  |node_modules
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
